[package]
name = "keyboard-server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "chrono"] }
jwt = "0.16.0"
serde = "1.0.209"
serde_json = "1.0.127"
hmac = "0.12.1"
bcrypt = "0.15.1"
sha2 = "0.10.8"
